--- a/Lab2RazorCRUD/Lab2RazorCRUD/appsettings.json
+++ b/Lab2RazorCRUD/Lab2RazorCRUD/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "PageSize": 3,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +7,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server =(local);uid=sa;pwd=123;Initial Catalog=SchoolContextDB;Data Source=.;Connection Timeout=100000;Persist Security Info=False;"
+  }
 }
